--- a/web/config.TEMPLATE.json
+++ b/web/config.TEMPLATE.json
@@ -3,6 +3,8 @@
     "app.secret"
   ],
 
+  "port": 5000,
+
   "app": {
     "id": "135724333240350",
     "secret": "558293e030e417253b638f100568e982"
