excluding sublime-workspace files

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 db.sqlite3
 node_modules*
 web/cache/*
+*.sublime-workspace
 
 # Any and all configs should have a default config.TEMPLATE.json file which should be copied and customized.
 config.json
